--- a/AUPSUP_HTML5_METASUPPLIER_BM/webapp/view/MetasupplierContacts.view.xml
+++ b/AUPSUP_HTML5_METASUPPLIER_BM/webapp/view/MetasupplierContacts.view.xml
@@ -2,7 +2,7 @@
 	controllerName="it.alteaup.supplier.portal.metasupplier.AUPSUP_HTML5_METASUPPLIER_BM.controller.MetasupplierContacts" displayBlock="true" xmlns:f="sap.ui.layout.form"
 	xmlns:core="sap.ui.core" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1" >
 	<Shell id="shell" appWidthLimited="false">
-		<Page id="contactsPage" showNavButton="false" navButtonPress="onNavBack" title="{titleJSONModel>/AppTitle}">
+		<Page id="contactsPage" showNavButton="false" title="{titleJSONModel>/AppTitle}">
 			<uxap:ObjectPageLayout id="ObjectPageLayoutId" sections="{mysettings>/settings/Sections}" showTitleInHeaderContent="true">
 				<uxap:headerTitle>
 					<uxap:ObjectPageHeader objectImageURI="sap-icon://person-placeholder" objectImageShape="Circle"
@@ -31,7 +31,7 @@
 					<uxap:ObjectPageSection title="{mysettings>SectionTitle}">
 						<uxap:subSections templateShareable="true">
 							<uxap:ObjectPageSubSection title="">
-								<List items="{mysettings>Subsections}" headerText="" visible="{mysettings>Data}">
+								<List id="ListContains" items="{mysettings>Subsections}" headerText="" visible="{mysettings>Data}">
 									<headerToolbar>
 										<OverflowToolbar>
 											<ToolbarSpacer/>
