--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/OrderPositionDetail.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/OrderPositionDetail.view.xml
@@ -1,6 +1,13 @@
-<mvc:View controllerName="it.alteaup.supplier.portal.purchords.AUPSUP_HTML5_PURCH_ORDS.controller.OrderPositionDetail" xmlns:mvc="sap.ui.core.mvc"
-	xmlns="sap.uxap" xmlns:layout="sap.ui.layout" xmlns:m="sap.m" xmlns:table="sap.ui.table" xmlns:f="sap.f" xmlns:core="sap.ui.core"
-	xmlns:personal="sap.uxap.sample.SharedBlocks.personal" xmlns:form="sap.ui.layout.form">
+<mvc:View controllerName="it.alteaup.supplier.portal.purchords.AUPSUP_HTML5_PURCH_ORDS.controller.OrderPositionDetail" 
+	xmlns:mvc="sap.ui.core.mvc" 
+	xmlns="sap.uxap" 
+	xmlns:layout="sap.ui.layout" 
+	xmlns:m="sap.m" 
+	xmlns:table="sap.ui.table" 
+	xmlns:f="sap.f" 
+	xmlns:core="sap.ui.core" 
+	xmlns:personal="sap.uxap.sample.SharedBlocks.personal" 
+	xmlns:form="sap.ui.layout.form">
 	<m:Shell id="shell" appWidthLimited="false">
 		<m:App id="app">
 			<m:pages>
@@ -25,9 +32,9 @@
 									<!--Testo Breve-->
 									<m:ObjectAttribute title="{i18n>IDNLF}" text="{ path: 'OrderPrositionJSONModel>/IDNLF' }"/>
 									<!--Codice Materiale usato dal fornitore-->
-									<m:ObjectAttribute title="{i18n>MENGE}" text="{ path: 'OrderPrositionJSONModel>/MENGE' }"/>
+									<m:ObjectAttribute title="{i18n>MENGE}" text="{ path: 'OrderPrositionJSONModel>/MENGE', formatter : '.importFormatter' }"/>
 									<!--Quantità-->
-									<m:ObjectAttribute title="{i18n>PEINH}" text="{ path: 'OrderPrositionJSONModel>/PEINH' }"/>
+									<m:ObjectAttribute title="{i18n>PEINH}" text="{ path: 'OrderPrositionJSONModel>/PEINH', formatter : '.importFormatter' }"/>
 									<!--Unità di prezzo-->
 								</m:VBox >
 							</layout:HorizontalLayout>
@@ -82,9 +89,9 @@
 														<m:Text text="{OrderPrositionJSONModel>ETENR}"/>
 														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.alteaup.supplier.portal.purchords.AUPSUP_HTML5_PURCH_ORDS.type.Date' }"/>
 														<m:Text text="{OrderPrositionJSONModel>LPEIN}"/>
-														<m:Text text="{OrderPrositionJSONModel>MENGE}"/>
+														<m:Text text="{path : 'OrderPrositionJSONModel>MENGE', formatter : '.importFormatter'}"/>
 														<!--<m:Text text="{OrderPrositionJSONModel>WEMNG}"/>-->
-														<m:Text text="{OrderPrositionJSONModel>MNG02}"/>
+														<m:Text text="{path : 'OrderPrositionJSONModel>MNG02', formatter : '.importFormatter'}"/>
 													</m:cells>
 												</m:ColumnListItem>
 											</m:items>
@@ -141,7 +148,7 @@
 														<m:Text text="{OrderPrositionJSONModel>ETENS}"/>
 														<m:Text text="{ path: 'OrderPrositionJSONModel>EINDT', type: 'it.alteaup.supplier.portal.purchords.AUPSUP_HTML5_PURCH_ORDS.type.Date' }"/>
 														<m:Text text="{OrderPrositionJSONModel>LPEIN}"/>
-														<m:Text text="{OrderPrositionJSONModel>MENGE}"/>
+														<m:Text text="{path : 'OrderPrositionJSONModel>MENGE', formatter : '.importFormatter'}"/>
 														<m:Text text="{OrderPrositionJSONModel>DABMG}"/>
 														<m:Text text="{OrderPrositionJSONModel>ESTKZ}"/>
 													</m:cells>
