--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/view/Worklist.view.xml
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/view/Worklist.view.xml
@@ -32,7 +32,7 @@
 												<m:Input value="{filterOrdersJSONModel>/ebeln}" submit="onSearchOrders"/>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="Metasupplier" label="{i18n>METASUP}" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterItem name="Metasupplier" label="{i18n>METASUP}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:MultiComboBox selectedKeys="{MetasupplierJSONModel>/METAID}" selectionChange="onChangeMetasupplier" items="{ path: 'MetasupplierJSONModel>/results', sorter: { path: 'METAID' } }">
 													<core:Item key="{MetasupplierJSONModel>METAID}" text="{MetasupplierJSONModel>DESCR}"/>
@@ -49,7 +49,7 @@
 												<m:Input value="{filterOrdersJSONModel>/INCO1}" submit="onSearchOrders"/>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="Lifnr" label="{i18n>supplier}" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterItem name="Lifnr" label="{i18n>supplier}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:MultiComboBox selectionChange="onChangeMetalifnr" showSecondaryValues="true" items="{ path: 'lifnrJSONModel>/', sorter: { path: 'LIFNR' } }">
 													<core:ListItem key="{lifnrJSONModel>LIFNR}" text="{lifnrJSONModel>DESCR}" additionalText="{lifnrJSONModel>LIFNR}"/>
@@ -61,14 +61,14 @@
 												<m:Input type="Text" value="{filterOrdersJSONModel>/MatnrDesc}" showValueHelp="true" valueHelpOnly="true" valueHelpRequest="handleMatnr" class="sapUiSmallMarginBottom" submit="onSearchOrders"/>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="Ekorg" label="{i18n>purchaseOrganization}" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterItem name="Ekorg" label="{i18n>purchaseOrganization}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekorg}" items="{ path: 'PurchaseOrganizationJSONModel>/results', sorter: { path: 'PURCH_ORG' } }">
 													<core:Item key="{PurchaseOrganizationJSONModel>PURCH_ORG}" text="{PurchaseOrganizationJSONModel>DESCR}"/>
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterItem>
-										<fb:FilterItem name="GrAcq" label="{i18n>EKGRP}" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterItem name="GrAcq" label="{i18n>EKGRP}" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:MultiComboBox selectedKeys="{filterOrdersJSONModel>/ekgrp}" items="{ path: 'PurchaseGroupJSONModel>/results', sorter: { path: 'CODE' } }" showSecondaryValues="true">
 													<core:ListItem key="{PurchaseGroupJSONModel>CODE}" text="{PurchaseGroupJSONModel>DESCR}" additionalText="{PurchaseGroupJSONModel>CODE}"/>
@@ -94,7 +94,7 @@
 												<m:Input type="Text"/>
 											</fb:control>
 										</fb:FilterGroupItem>
-										<fb:FilterGroupItem groupName="GBuyer" groupTitle="Buyer" name="B1" label="Suppliers" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterGroupItem groupName="GBuyer" groupTitle="Buyer" name="B1" label="Suppliers" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:MultiComboBox >
 													<m:items>
@@ -105,7 +105,7 @@
 												</m:MultiComboBox>
 											</fb:control>
 										</fb:FilterGroupItem>
-										<fb:FilterGroupItem groupName="GBuyer" groupTitle="Buyer" name="B2" label="Sales Organizations" visible="{VisibilityJSONModel>/isBuyer}">
+										<fb:FilterGroupItem groupName="GBuyer" groupTitle="Buyer" name="B2" label="Sales Organizations" visible="{= ${VisibilityJSONModel>/isBuyer} === true || ${VisibilityJSONModel>/isPlanner} === true || ${VisibilityJSONModel>/isAdministrator} === true }">
 											<fb:control>
 												<m:Input type="Text"/>
 											</fb:control>
@@ -189,11 +189,11 @@
 															<m:Text text="{OrderJSONModel>MATNR}"/>
 															<m:Text text="{OrderJSONModel>TXZ01}"/>
 															<m:Text text="{OrderJSONModel>IDNLF}"/>
-															<m:Text text="{OrderJSONModel>KTMNG}"/>
-															<m:Text text="{OrderJSONModel>MEINS}"/>
+															<m:Text text="{path : 'OrderJSONModel>KTMNG', formatter : '.importFormatter'}"/>
+															<m:Text text="{OrderJSONModel>MEINS}" />
 															<m:Text text="{OrderJSONModel>WAERS}"/>
-															<m:Text text="{OrderJSONModel>PRIMO_PERIODO}"/>
-															<m:Text text="{OrderJSONModel>SECONDO_PERIODO}"/>
+															<m:Text text="{path : 'OrderJSONModel>PRIMO_PERIODO', formatter : '.importFormatter'}"/>
+															<m:Text text="{path : 'OrderJSONModel>SECONDO_PERIODO', formatter : '.importFormatter'}"/>
 															<m:Button icon="sap-icon://document-text" press="onGetTexts"/>
 														</m:cells>
 													</m:ColumnListItem>
