METASUPPLIER gestione zeri davanti a lifnr e matnr

--- a/AUPSUP_HTML5_METASUPPLIER/webapp/view/Suppliers.view.xml
+++ b/AUPSUP_HTML5_METASUPPLIER/webapp/view/Suppliers.view.xml
@@ -74,7 +74,7 @@
 							<items>
 								<ColumnListItem>
 									<cells>
-										<Text text="{tableModelSuppliers>LIFNR}"/>
+										<Text text="{path : 'tableModelSuppliers>LIFNR', formatter : '.removeZeroBefore'}"/>
 										<Text text="{tableModelSuppliers>NAME1}"/>
 										<Text text="{tableModelSuppliers>EKORG}"/>
 										<Text text="{tableModelSuppliers>STREET}"/>
