PURCH ORDS gestione zeri davanti a lifnr e matnr

--- a/AUPSUP_HTML5_PURCH_ORDS/webapp/view/OrderPositionDetail.view.xml
+++ b/AUPSUP_HTML5_PURCH_ORDS/webapp/view/OrderPositionDetail.view.xml
@@ -26,7 +26,7 @@
 						<headerContent>
 							<layout:HorizontalLayout>
 								<m:VBox class="sapUiSmallMargin">
-									<m:ObjectAttribute title="{i18n>MATNR}" text="{ path: 'OrderPrositionJSONModel>/MATNR' }"/>
+									<m:ObjectAttribute title="{i18n>MATNR}" text="{ path: 'OrderPrositionJSONModel>/MATNR', formatter : '.removeZeroBefore' }"/>
 									<!--Materiale-->
 									<m:ObjectAttribute title="{i18n>TXZ01}" text="{ path: 'OrderPrositionJSONModel>/TXZ01' }"/>
 									<!--Testo Breve-->
